Counters are always generated content and cannot be selected.

Copying selection across generated ::before/::after with counter() did
not copy the contents, but the counter content was painted as selected
as if it was.

LayoutTextFragment was already overriding the implementation of
CanBeSelectionLeaf() to skip generated content, but LayoutCounter
inherits from LayoutText which returns always true. Return false for
LayoutCounter as it is always generated content.

R=mstensho@opera.com
BUG=703807

Review-Url: https://codereview.chromium.org/2867083003
Cr-Commit-Position: refs/heads/master@{#470141}

Former-commit-id: 9d8a90f8a7f49c673bcd4e369efc84c62cc18285